[workspace]
members = ["vortex-cgroup", "vortex-cli",
    "vortex-core", "vortex-namespace", "vortex-security",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/vortex-runtime"

[workspace.dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# System interface
nix = { version = "0.29", features = ["fs", "hostname", "mount", "sched", "signal", "user"] }
libc = "0.2"

# Utilities
bytes = "1.7"

# Internal workspace dependencies
vortex-core = { path = "vortex-core" }
vortex-cgroup = { path = "vortex-cgroup" }
vortex-namespace = { path = "vortex-namespace" }
vortex-security = { path = "vortex-security" }
