[package]
name = "vortex-cgroup"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vortex-core.workspace = true
thiserror.workspace = true
nix.workspace = true

anyhow = "1.0"

# Async I/O (for future)
tokio = { workspace = true, features = ["fs", "io-util"] }

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }