[package]
name = "vortex-cgroup"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal
vortex-core.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Logging
tracing.workspace = true

# Serialization
serde.workspace = true

# System
nix.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }