[package]
name = "vortex-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Our crates
vortex-core.workspace = true
vortex-cgroup.workspace = true
vortex-namespace.workspace = true

# CLI parsing
clap.workspace = true

# Async runtime
tokio.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow = "1.0"
nix.workspace = true
hostname = "0.4.2"