[package]
name = "vortex-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "vortex"
path = "src/main.rs"

[dependencies]
# Internal
vortex-core.workspace = true
vortex-cgroup.workspace = true
vortex-namespace.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Async
tokio.workspace = true

# CLI
clap.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# System
nix.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true