[package]
name = "vortex-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for Vortex container runtime"

[[bin]]
name = "vortex"
path = "src/main.rs"

[dependencies]
# Internal
vortex-core.workspace = true
vortex-cgroup.workspace = true
vortex-namespace.workspace = true

# Workspace dependencies
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nix.workspace = true
clap.workspace = true
libc.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true