[package]
name = "vortex-namespace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Our crates
vortex-core.workspace = true

# System interface
nix.workspace = true
libc.workspace = true

# Error handling
thiserror.workspace = true
anyhow = "1.0"

# Logging
tracing.workspace = true
config = "0.15.19"
tracing-subscriber.workspace = true
hostname = "0.4.2"
ctrlc = "3.5.1"