[package]
name = "vortex-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal
vortex-core.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# System
nix.workspace = true
libc.workspace = true

# Logging
tracing.workspace = true
